src/reels.css
.usy-progress-bar-container {
    box-sizing: border-box;
    border-width: 0;

    overflow-y: visible;
    overflow-x: clip;

    * {
        box-sizing: border-box;
    }

    position: absolute;
    bottom: 0;
    min-height: 15px;
    height: 15px;
    max-height: 15px;
    cursor: pointer;
    width: 100%;
    z-index: 9999999999999;

    &:hover .usy-progress-bar, .usy-progress-bar.usy-holding {
        height: 6px;
        opacity: 1;

        &::after {
            opacity: 0.2;
            height: 6px;
        }
    }

    &:hover, &:has(.usy-progress-bar.usy-holding) {
        background: linear-gradient(to bottom, transparent, #00000066);

        &::after {
            opacity: 1;
        }
    }

    &:not(:hover) .usy-progress-bar-hidden:not(.usy-holding) {
        opacity: 0;
    }

    &::after {
        pointer-events: none;
        user-select: none;
        content: var(--time, "0:00/0:00");
        color: white;
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        bottom: 30px;
        z-index: 100;
        font-size: 32px;
        font-weight: bold;
        text-shadow: 0 0 20px black;
        opacity: 0;
        transition: 0.2s;
    }

    &.no-progress::after {
        display: none !important;
    }

    .usy-progress-bar {
        position: absolute;
        bottom: 0;
        left: 0;
        min-height: 3px;
        height: 3px;
        max-height: 6px;
        width: 0;
        z-index: 9999;
        background-color: white;
        transition: width var(--remainingTime, 0s) linear, height 0.2s, opacity 0.2s, border 0.2s;

        border-width: 0;
        border-style: solid;
        border-top-right-radius: 3px;
        border-bottom-right-radius: 3px;

        opacity: 0.4;

        &::after {
            content: "";
            width: 100vw;
            background-color: white;
            opacity: 0;
            min-height: 3px;
            height: 3px;
            max-height: 6px;
            position: absolute;
            bottom: 0;
            pointer-events: none;
            transition: height 0.2s, opacity 0.2s;
        }

        &.usy-holding, &.usy-holding::after {
            transition: width 0s, height 0.2s, opacity 0.2s;
        }
    }
}

.usy-volume-bar-button {
    overflow-x: visible !important;
    overflow-y: visible !important;

    .usy-volume-bar-container {
        --usyWidth: 100px;
        --usyHeight: 5px;
        --right-space: 10px;
        --click-margin: 10px;

        position: absolute;
        left: calc(-1 * var(--usyWidth) - var(--right-space));
        width: var(--usyWidth);
        height: calc(var(--usyHeight) + var(--click-margin));

        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;

        .usy-volume-bar, .usy-volume-bar::before {
            opacity: 0;
            transition: opacity 0.2s;
            position: absolute;
            left: 0;
            width: var(--usyWidth);
            height: var(--usyHeight);
            background: white;
            box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
            border-radius: 3px;
            border: solid 0 transparent;
        }

        .usy-volume-bar::before {
            content: "";
        }
    }

    .usy-volume-bar-container:hover .usy-volume-bar,
    &:hover .usy-volume-bar, .usy-volume-bar.usy-holding {
        opacity: 1;

        &::before {
            opacity: 0.2;
        }
    }
}

/*fix the volume bar not being clickable*/
.x1ja2u2z {
    z-index: unset !important;
}

